--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@
 @import url("../public/css/main_product.css");
 @import url("../public/css/carousel.css");
 @import url("../public/css/product_desc.css");
+@import url("../public/css/cart.css");
 
 * {
   font-family: "Kumbh Sans", sans-serif;
@@ -13,15 +14,6 @@
   box-sizing: border-box;
 }
 
-/* .container {
-  width: 20.3125rem;
-  margin: 0 auto;
+body {
   position: relative;
 }
-
-@media only screen and (min-width: 768px) {
-  .container {
-    width: 69.375rem;
-    margin: 0 auto;
-  }
-} */
